# ongaku

./: Cargo.toml  LICENSE  README.md  build.rs  flake.nix  justfile
src/: command.rs  db.proto  db.rs  error.rs  main.rs  yt_dlp.rs
